--- a/SystemWrapper.Tests/SystemWrapper.Tests.csproj
+++ b/SystemWrapper.Tests/SystemWrapper.Tests.csproj
@@ -59,6 +59,10 @@
       <Name>SystemWrapper</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="libs\Rhino.Mocks.dll" />
+    <Content Include="libs\Rhino.Mocks.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
