--- a/SystemWrapper.Samples/SystemWrapper.Samples.csproj
+++ b/SystemWrapper.Samples/SystemWrapper.Samples.csproj
@@ -51,7 +51,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssemblySample.cs" />
+    <Compile Include="Reflection\AssemblySample.cs" />
+    <Compile Include="IO\FileInfoSample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
