Adding more methods to Configuration/ConfigurationManagerWrap.cs

--- a/SystemWrapper.Tests/SystemWrapper.Tests.csproj
+++ b/SystemWrapper.Tests/SystemWrapper.Tests.csproj
@@ -60,6 +60,7 @@
     </Reference>
     <Reference Include="Rhino.Mocks, Version=3.5.0.1337, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -74,6 +75,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\ConfigurationManagerWrapTests.cs" />
     <Compile Include="Data\SqlClient\SqlDataReaderWrapTests.cs" />
     <Compile Include="Data\SqlClient\SqlConnectionWrapTests.cs" />
     <Compile Include="Data\SqlClient\SqlCommandWrapTests.cs" />
